Fix layout shift using stable scrollbar

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -31,12 +31,13 @@
 @layer base {
   html {
     scroll-behavior: smooth;
+    scrollbar-gutter: stable;
   }
 
   html,
   body,
   #root {
-    min-height: 100%;
+    height: 100%;
   }
 
   body {
